tests/scripts/loop.hk
for i in 1..3 {
  println(i)
}

for i in 1..=5 {
  println(i)
}

for i in 1..10 {
  if i == 3 {
    break;
  }
  println(i)
}

for i in 1..=10 {
  if i == 3 {
    continue;
  }
  println(i)
}
